[package]
name = "rustwine-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tch = { workspace = true }
syn = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 